# smolnaoagent

./: .env  .gitignore  generatePrompt.py  main.py  mainText.py  mainVoice.py  memory.db  pyproject.toml
agent/: main.py
nao/: .env  cons.py  main.py  memory.db  nao.py  setupNao.py  tools.py
nao/utils/: main.py
