[project]
name = "smolnaoagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.5.4",
    "dotenv>=0.9.9",
    "halo>=0.0.31",
    "langchain-community>=0.3.27",
    "litellm>=1.75.9",
    "pyaudio>=0.2.14",
    "qi>=3.1.5",
    "realtimestt>=0.3.104",
    "smolagents[openai]>=1.21.2",
]
